--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/auth": "^12.1.0",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "firebase": "^8.6.7",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-date-picker": "^3.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^2.2.0",
