--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-date-picker": "^3.3.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^2.2.0",
