--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-date-picker": "^3.3.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-material-dialog": "^0.7.7",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
