--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,21 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.3"
+        buildToolsVersion = "30.0.2"
         minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
-        ndkVersion = "20.1.5948944"
-        googlePlayServicesAuthVersion = "16.0.1" // <--- use this version or newer
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        ndkVersion = "23.1.7779620"
+        googlePlayServicesAuthVersion = "18.0.0" // <--- use this version or newer
     }
+    // ext {
+    //     buildToolsVersion = "29.0.3"
+    //     minSdkVersion = 21
+    //     compileSdkVersion = 29
+    //     targetSdkVersion = 29
+    //     ndkVersion = "20.1.5948944"
+    //     googlePlayServicesAuthVersion = "16.0.1" // <--- use this version or newer
+    // }
     repositories {
         google()
         jcenter()
